--- a/ACL4SSR_Online_Full_Mannix.ini
+++ b/ACL4SSR_Online_Full_Mannix.ini
@@ -450,5 +450,6 @@ ruleset=✈️ ‍起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=🛩️ ‍墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️ ‍墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🛩️ ‍墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🛩️ ‍墙内,https://raw.githubusercontent.com/E1nnnnnnn/-ClashRules/refs/heads/main/EmbyDirect.list
 ruleset=🛩️ ‍墙内,[]GEOIP,CN
 ruleset=🌐 ‍未知站点,[]FINAL
